--- a/index.pug
+++ b/index.pug
@@ -38,4 +38,10 @@ html
 			while z < 10
 				li= z++
 
+		// each val in [1,2,3,4,'five',6]
+			div= val
+		each val, index in [1,2,3,4,'five',6]
+			div= 'index '+index+ ' : 
+			his value is ' +val
+
 			
